# personal-archiver-steam

./: .envrc  .flake8  .pre-commit-config.yaml  LICENSE-APACHE  LICENSE-MIT  alembic.ini  flake.nix  notes.md  pyproject.toml
nix/: arxCommand.nix  package.nix  prootClosure.nix  proot_seccomp.patch
personal_archiver_steam/: __init__.py  client.py  types.py
personal_archiver_steam/db/: __init__.py
personal_archiver_steam/db/migrations/: __init__.py  env.py
tests/: __init__.py  conftest.py  test_db.py
